--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+    android:background="#7a9e9f"
     tools:context=".ui.task.CreateTaskActivity">
 
     <TextView
@@ -39,7 +39,7 @@
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#FFFFFF"
+            android:background="#7a9e9f"
             app:srcCompat="@drawable/backarrow"
             tools:ignore="SpeakableTextPresentCheck" />
 
@@ -53,7 +53,7 @@
             android:layout_width="18dp"
             android:layout_height="48dp"
             android:layout_weight="1"
-            android:background="#4ABC4E"
+            android:background="#b8d8db"
             android:text="Create" />
     </LinearLayout>
 
@@ -231,7 +231,7 @@
                     android:layout_width="156dp"
                     android:layout_height="48dp"
                     android:layout_weight="1"
-                    android:background="#BDBCBC"
+                    android:background="#b8d8db"
                     android:onClick="createNewCategory"
                     android:text="CREATE A NEW CATEGORY" />
             </LinearLayout>
