--- a/app/src/main/res/drawable/rectanglebox.xml
+++ b/app/src/main/res/drawable/rectanglebox.xml
@@ -6,5 +6,5 @@
         android:right="2dp"
         android:bottom="2dp" />
     <corners android:radius="5dp" />
-    <solid android:color="#DDE0E0E0" />
+    <solid android:color="#b8d8db" />
 </shape>
