--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#7a9e9f">
+
 
     <TextView
         android:id="@+id/Friends"
@@ -38,9 +40,10 @@
 
     <Button
         android:id="@+id/ButtonRequests"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="160dp"
+        android:layout_height="49dp"
         android:layout_marginTop="100dp"
+        android:background="#b8d8db"
         android:text="See friend requests"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -71,8 +74,9 @@
 
         <Button
             android:id="@+id/button5"
-            android:layout_width="wrap_content"
+            android:layout_width="114dp"
             android:layout_height="wrap_content"
+            android:background="#b8d8db"
             android:text="Send Request" />
     </LinearLayout>
 
