--- a/app/src/main/res/layout/friend.xml
+++ b/app/src/main/res/layout/friend.xml
@@ -33,7 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="-5dp"
-            android:text="Remove Friend" />
+            android:text="Remove Friend"
+            />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
