--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,15 +4,19 @@
     <item
         android:id="@+id/friends"
         android:title="Friends"
-        android:icon="@drawable/ic_baseline_groups_24"/>
+        android:icon="@drawable/ic_baseline_groups_24"
+        android:enabled="true"
+        />
 
     <item
         android:id="@+id/tasks"
+        android:enabled="true"
         android:title="Tasks"
         android:icon="@drawable/ic_baseline_assignment_24"/>
 
     <item
         android:id="@+id/collective"
+        android:enabled="true"
         android:title="Collective"
         android:icon="@drawable/ic_baseline_house_24"/>
 </menu>
