Renamed the "add members" button to "invite members", and added an onclick listener on that button

--- a/app/src/main/res/layout/activity_specific_collective.xml
+++ b/app/src/main/res/layout/activity_specific_collective.xml
@@ -146,13 +146,13 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/addMemberButton"
+                android:id="@+id/inviteMemberButton"
                 android:layout_width="50dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
-                android:minHeight="48dp"
                 android:background="#b8d8db"
-                android:text="Add members" />
+                android:minHeight="48dp"
+                android:text="Invite members" />
 
             <View
                 android:layout_width="6dp"
