Created a new activity called CollectiveRemoveMembers

--- a/app/src/main/res/layout/activity_specific_collective.xml
+++ b/app/src/main/res/layout/activity_specific_collective.xml
@@ -164,7 +164,8 @@
                 android:layout_height="48dp"
                 android:layout_weight="1"
                 android:background="#b8d8db"
-                android:text="Delete members" />
+                android:onClick="removeMembersFromCollective"
+                android:text="Remove members" />
         </LinearLayout>
 
         <Space
