--- a/app/src/main/res/layout/activity_friends.xml
+++ b/app/src/main/res/layout/activity_friends.xml
@@ -39,7 +39,7 @@
     </ScrollView>
 
     <Button
-        android:id="@+id/ButtonRequests"
+        android:id="@+id/SeeRequestsButton"
         android:layout_width="160dp"
         android:layout_height="49dp"
         android:layout_marginTop="100dp"
@@ -67,13 +67,13 @@
             android:layout_marginTop="0dp"
             android:ems="10"
             android:hint="Username"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:padding="12sp"
             android:textColor="@color/black"
             android:textSize="20sp" />
 
         <Button
-            android:id="@+id/button5"
+            android:id="@+id/SendRequestButton"
             android:layout_width="114dp"
             android:layout_height="wrap_content"
             android:background="#b8d8db"
