Added the ability to remove members from the collective

--- a/app/src/main/res/layout/activity_collective_invite_users.xml
+++ b/app/src/main/res/layout/activity_collective_invite_users.xml
@@ -103,7 +103,7 @@
             android:layout_height="10dp" />
 
         <ListView
-            android:id="@+id/friendsListView"
+            android:id="@+id/membersListView"
             android:layout_width="match_parent"
             android:layout_height="246dp" />
 
