Added the ability to join a collective by entering the collective id

--- a/app/src/main/res/layout/activity_collective.xml
+++ b/app/src/main/res/layout/activity_collective.xml
@@ -82,7 +82,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#b8d8db"
-                android:text="Send request" />
+                android:onClick="joinCollectiveByCollectiveID"
+                android:text="Join" />
 
         </LinearLayout>
 
