--- a/app/src/main/res/layout/activity_view_task.xml
+++ b/app/src/main/res/layout/activity_view_task.xml
@@ -193,6 +193,6 @@
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/menu" />
+        app:menu="@menu/bottom_nav" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
