--- a/app/src/main/res/layout/activity_specific_collective.xml
+++ b/app/src/main/res/layout/activity_specific_collective.xml
@@ -157,7 +157,7 @@
             <Button
                 android:id="@+id/inviteMemberButton"
                 android:layout_width="50dp"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#b8d8db"
                 android:minHeight="48dp"
@@ -170,7 +170,7 @@
             <Button
                 android:id="@+id/removeMemberButton"
                 android:layout_width="50dp"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#b8d8db"
                 android:text="Remove members" />
@@ -182,7 +182,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:orientation="horizontal">
 
             <Button
@@ -190,21 +190,22 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#b8d8db"
                 android:onClick="leaveCollective"
-                android:text="Leave collective"
-                android:background="#b8d8db"/>
+                android:text="Leave collective" />
 
             <View
                 android:layout_width="6dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/deleteCollectiveButton"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Delete collective"
-                android:background="#b8d8db"/>
+                android:background="#b8d8db"
+                android:onClick="deleteCollective"
+                android:text="Delete collective" />
         </LinearLayout>
 
     </LinearLayout>
