--- a/app/src/main/res/layout/popup_with_edittext.xml
+++ b/app/src/main/res/layout/popup_with_edittext.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#7a9e9f">
 
     <EditText
         android:id="@+id/popupEditText"
@@ -11,3 +12,4 @@
         android:hint="Enter the name of the category"/>
 
 </LinearLayout>
+
