--- a/app/src/main/res/layout/activity_collective_invite_users.xml
+++ b/app/src/main/res/layout/activity_collective_invite_users.xml
@@ -37,15 +37,15 @@
         app:layout_constraintVertical_bias="0.056" />
 
     <LinearLayout
-        android:layout_width="412dp"
-        android:layout_height="439dp"
+        android:layout_width="0dp"
+        android:layout_height="475dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.151">
+        app:layout_constraintVertical_bias="0.149">
 
         <TextView
             android:id="@+id/textView10"
@@ -81,9 +81,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:background="#b8d8db"
                 android:onClick="inviteUserByUsername"
-                android:text="Invite"
-                android:background="#b8d8db"/>
+                android:text="Invite" />
 
         </LinearLayout>
 
@@ -105,20 +105,29 @@
             android:layout_width="match_parent"
             android:layout_height="10dp" />
 
-        <ListView
-            android:id="@+id/membersListView"
+        <TextView
+            android:id="@+id/noFriendsTextView"
             android:layout_width="match_parent"
-            android:layout_height="246dp" />
+            android:layout_height="36dp"
+            android:gravity="center"
+            android:textSize="16sp" />
+
+        <ListView
+            android:id="@+id/friendsListView"
+            android:layout_width="match_parent"
+            android:layout_height="246dp"
+            android:choiceMode="multipleChoice" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/removeMembersButton"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="#b8d8db"
             android:gravity="center"
             android:minHeight="48dp"
+            android:onClick="inviteFromFriendsList"
             android:text="Invite selected friends"
-            android:background="#b8d8db"
             tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
     </LinearLayout>
 
