--- a/app/src/main/res/layout/activity_task_overview.xml
+++ b/app/src/main/res/layout/activity_task_overview.xml
@@ -20,17 +20,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_width="360dp"
-        android:layout_height="286dp"
-        tools:layout_editor_absoluteX="25dp"
-        tools:layout_editor_absoluteY="185dp"
+        android:id="@+id/scrollView2"
+        android:layout_width="362dp"
+        android:layout_height="247dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/taskpage_tv"
-        app:layout_constraintVertical_bias="0.239"
-        >
+        app:layout_constraintVertical_bias="0.387">
 
         <LinearLayout
             android:id="@+id/rv_todo"
@@ -48,8 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="16dp"
-        android:text="All Tasks"
         android:background="#b8d8db"
+        android:text="All Tasks"
         app:layout_constraintEnd_toStartOf="@+id/myTaskButton"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,8 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="16dp"
-        android:text="My tasks"
         android:background="#b8d8db"
+        android:text="My tasks"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/allTasksButton"
@@ -71,7 +69,7 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="52dp"
         android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -80,17 +78,19 @@
 
     <Button
         android:id="@+id/add_btn"
-        android:layout_width="95dp"
-        android:layout_height="85dp"
-        android:layout_marginTop="336dp"
-        android:background="@drawable/round_button"
+        android:layout_width="130dp"
+        android:layout_height="59dp"
+        android:layout_marginTop="428dp"
+        android:background="@color/button"
         android:text="+\nAdd Task"
         android:textAppearance="?android:textAppearanceLarge"
         android:textSize="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigator"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/divider" />
+        app:layout_constraintStart_toEndOf="@+id/delete_btn"
+        app:layout_constraintTop_toBottomOf="@+id/taskpage_tv"
+        app:layout_constraintVertical_bias="0.093" />
 
     <ImageView
         android:id="@+id/logoutImageView"
@@ -105,13 +105,15 @@
         android:id="@+id/delete_btn"
         android:layout_width="130dp"
         android:layout_height="59dp"
-        android:layout_marginTop="352dp"
+        android:layout_marginTop="428dp"
         android:background="#B90E0A"
         android:text="Delete Selected"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigator"
+        app:layout_constraintEnd_toStartOf="@+id/add_btn"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/add_btn"
-        app:layout_constraintTop_toTopOf="@+id/divider" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskpage_tv"
+        app:layout_constraintVertical_bias="0.084" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigator"
@@ -123,5 +125,15 @@
         app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/bottom_nav" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="191dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="68dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/taskpage_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
