Added button that logs out user if user does not create or join an existing collective after signing up.

--- a/app/src/main/res/layout/activity_collective.xml
+++ b/app/src/main/res/layout/activity_collective.xml
@@ -98,4 +98,15 @@
             android:layout_height="175dp" />
     </LinearLayout>
 
+    <ImageButton
+        android:id="@+id/backToLoginPageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="#7a9e9f"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/backarrow" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
