--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,25 +15,11 @@
     </style>
     <style name="ThemeOverlay.MaterialComponents.MaterialAlertDialog_Background" parent="@style/ThemeOverlay.MaterialComponents.MaterialAlertDialog">
         <!-- Background Color-->
-        <item name="android:background">@color/background</item>
+        <item name="android:background">@color/button</item>
         <!-- Text Color for title and message -->
-        <item name="colorOnSurface">@color/background</item>
+        <item name="colorOnSurface">@color/button</item>
         <!-- Style for positive button -->
-        <item name="android:buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
-        <item name="android:buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+
     </style>
-    <style name="PositiveButtonStyle" parent="@style/Widget.MaterialComponents.Button">
-        <!-- text color for the button -->
-        <item name="android:textColor">@color/green</item>
-        <!-- Background tint for the button -->
-        <item name="backgroundTint">@color/green</item>
-        <item name="android:textSize">20dp</item>
-    </style>
-    <style name="NegativeButtonStyle" parent="@style/Widget.MaterialComponents.Button">
-        <!-- text color for the button -->
-        <item name="android:textColor">@color/red</item>
-        <!-- Background tint for the button -->
-        <item name="backgroundTint">@color/red</item>
-        <item name="android:textSize">20dp</item>
-    </style>
+
 </resources>
