--- a/app/src/main/res/layout/activity_collective_remove_members.xml
+++ b/app/src/main/res/layout/activity_collective_remove_members.xml
@@ -85,7 +85,7 @@
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigator"
+        android:id="@+id/bottom_navigator_remove_members"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
