--- a/app/src/main/res/layout/activity_friendrequests.xml
+++ b/app/src/main/res/layout/activity_friendrequests.xml
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigator"
+        android:id="@+id/bottom_navigator_friend_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
